# Streamlined_Onboarding_Demo

./: .gitignore  .gitmodules  README.md  demo.py  environment.yaml  notes.md  requirements.txt  wpa_ctrl_iface.py
app/: .webpage.py.swp  webpage.py
docs/: Build.md  Running.md  (+2 more)
ocf_devices/: MANIFEST.in  Makefile  dotenv_template  setup.cfg  switch_main.py
ocf_devices/autostart/: so_lamp.desktop  so_lightswitch.desktop
ocf_devices/include/: socommon.h  solamp.h  soswitch.h
ocf_devices/lightswitch/: Makefile  dotenv_template  main.py  setup.cfg  so_lightswitch.desktop  soswitch.c  soswitch.h  switch_cli.py  switch_main.py
ocf_devices/lightswitch/slined_onboarding/: __init__.py  soswitch.py  wpa_dpp_qr.py
ocf_devices/lightswitch/slined_onboarding/cli/: __init__.py  __main__.py  switch_cli.py
ocf_devices/lightswitch/slined_onboarding/gui/: __init__.py  so_img.py  so_pi.py  switch_main.py  switch_worker.py
ocf_devices/slined_onboarding/: __init__.py  wpa_dpp_qr.py
ocf_devices/slined_onboarding/cli/: __init__.py  switch_cli.py
ocf_devices/slined_onboarding/common/: __init__.py  so_gpio.py  so_img.py  so_pi.py  sodevice.py  wpa_dpp_qr.py
ocf_devices/slined_onboarding/gui/: __init__.py  __main__.py  so_gpio.py  so_img.py  so_pi.py  switch_worker.py
ocf_devices/slined_onboarding/lamp/: __init__.py  __main__.py  lamp_gui.py  lamp_main.py  solamp.py
ocf_devices/slined_onboarding/lightswitch/: __init__.py  __main__.py  soswitch.c  soswitch.py  switch_gui.py  switch_main.py  switch_worker.py
ocf_devices/src/: lightswitch.c  socommon.c  solamp.c  soswitch.c
(+17 files in other folders)
