[metadata]
name = so_lightswitch
version = 0.0.2

[options]
packages = find:
include_package_data = True
python_requires = >=3
install_requires =
  click==8.0.3
  gpiozero==1.6.2
  Pillow==8.3.2
  python-dotenv==0.19.1
  qrcode==7.3.1

[options.entry_points]
console_scripts =
  so_lightswitch_gui = slined_onboarding.gui:gui_main
# so_lightswitch_cli = slined_onboarding:cli_main
