[metadata]
name = so_lightswitch
version = 0.0.1

[options]
packages = find:
include_package_data = True
python_requires = >=3
install_requires =
  click==8.0.3
  certifi==2021.5.30
  colorzero==2.0
  gpiozero==1.6.2
  Pillow==8.3.2
  PyQt5==5.15.1
  PyQt5-Qt==5.15.2
  PyQt5-Qt5==5.15.2
  PyQt5-sip==12.9.0
  python-dotenv==0.19.1
  qrcode==7.3.1

[options.entry_points]
console_scripts =
  so_lightswitch_gui = slined_onboarding.gui:gui_main
# so_lightswitch_cli = slined_onboarding:cli_main
